# candidates-registry

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  configs.py  database.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  helper.py  main.py  mongo-init.sh  pyproject.toml
middleware/: auth.py  main.py
models/: candidate.py  user.py
nginx/: default.conf
routes/: auth.py  candidate.py  main.py
schemas/: candidate.py  user.py
tests/: constants.py  test_auth.py  test_candidate.py  test_celery.py  test_healthcheck.py  utils.py
