[tool.poetry]
name = "candidates-registry"
version = "0.1.0"
description = "This is a python test project for candidates registry based on fastapi framework"
authors = ["Shahan <shahan.khaan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
build = "poetry build --format sdist"
start_dev = "poetry run uvicorn --host 0.0.0.0 --port 7000 main:app --reload"
start = "poetry run uvicorn --host 0.0.0.0 --port 7000 main:app"
