[tool.poetry]
name = "candidates-registry"
version = "0.1.0"
description = "This is a python test project for candidates registry based on fastapi framework"
authors = ["Shahan <shahan.khaan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
