[tool.poetry]
name = "candidates-registry"
version = "0.1.0"
description = "This is a python test project for candidates registry based on fastapi framework"
authors = ["Shahan <shahan.khaan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
sentry-sdk = {extras = ["fastapi"], version = "^2.12.0"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
motor = "^3.5.1"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = "^5.4.0"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
